--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Smarty - Multipurpose + Admin</title>
+		<title>Rocket Elevators  - Multipurpose + Admin</title>
+		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 		<meta name="description" content="" />
 		<meta name="Author" content="Dorin Grigoras [www.stepofweb.com]" />
+		
 
 		<!-- mobile settings -->
 		<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
@@ -48,7 +50,7 @@
 		menu-vertical-hide		= hidden, open on click
 		
 		BACKGROUND IMAGE [together with .boxed class]
-		data-background="assets/images/_smarty/boxed_background/1.jpg"
+		data-background="assets/images/_Rocket Elevators /boxed_background/1.jpg"
 	-->
 	<body class="smoothscroll enable-animation">
 
@@ -60,7 +62,7 @@
 				<div class="row">
 
 					<div class="col-md-4">
-						<h6><i class="icon-heart"></i> WHY SMARTY?</h6>
+						<h6><i class="icon-heart"></i> WHY Rocket Elevators ?</h6>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo a sodales sed, dignissim pretium nunc. Nam et lacus neque. Ut enim massa, sodales tempor convallis et, iaculis ac massa. </p>
 					</div>
 
@@ -136,7 +138,7 @@
 
 						<!-- Logo -->
 						<a class="logo float-left scrollTo" href="#top">
-							<img src="assets/images/_smarty/logo_dark.png" alt="" />
+							<img src="assets/images/_Rocket Elevators /logo_dark.png" alt="" />
 						</a>
 
 						<!-- 
@@ -391,7 +393,7 @@
 			<!-- BUTTON CALLOUT -->
 			<a href="#" class="btn btn-xlg btn-primary fs-20 fullwidth m-0 rad-0 p-40">
 				<span class="font-lato fs-30">
-					Did Smarty convinced you? 
+					Did Rocket Elevators  convinced you? 
 					<strong>Contact us &raquo;</strong>
 				</span>
 			</a>
