--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Rocket Elevators  - Multipurpose + Admin</title>
-		<link rel="icon" href="http://www.your-web-site-name.com/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<meta name="description" content="" />
 		<meta name="Author" content="Dorin Grigoras [www.stepofweb.com]" />
 		
